Refactor : fixed code